# trip-extraction

./: .env.example  .gitignore  .prettierignore  .prettierrc.json  README.md  api-reference.md  api-rest.md  api.md  architecture.md  index.html  install.fish  main.py  mkdocs.yml  nx.json  objects.inv  package-lock.json  package.json  pyproject.toml  requirements.txt  sitemap.xml  train_model.py  usage.md
.github/workflows/: ci.yml  deploy-docs.yml
api/: index.html
api-reference/: index.html
api-rest/: index.html
apps/api/: README.md  project.json  pyproject.toml
apps/api/scripts/: __init__.py  run_api.py
apps/api/src/api/: main.py
apps/api/src/api/routers/: __init__.py  trip.py
apps/api/src/api/schemas/: __init__.py  trip.py
apps/api/src/api/services/: trip_service.py
apps/web/: README.md  eslint.config.js  index.html  package.json  project.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx
apps/web/src/components/ui/: button.tsx
architecture/: index.html
data/: training_dataset.json
docs/: architecture.md  guide-usage.md  index.md  installation.md  trip-parser.md
guide-usage/: index.html
installation/: index.html
libs/trip-parser/: .gitignore  README.md  project.json  pyproject.toml
libs/trip-parser/datasets/: training_dataset.json
libs/trip-parser/scripts/: train.py
libs/trip-parser/src/trip_parser/: config.py  trip_parser.py
libs/trip-parser/src/trip_parser/models/: __init__.py  base.py
scripts/: demo.py  train.py
search/: search_index.json
src/api/: __init__.py
src/api/routers/: trip.py
src/api/schemas/: trip.py
src/api/services/: __init__.py  trip_service.py
src/trip/: __init__.py  __main__.py  config.py  departure_arrival_classifier.py  exceptions.py  ner_extractor.py  trip_parser.py  utils.py
src/trip/models/: __init__.py  base.py  classifier.py  ner.py
src/trip_parser/: __init__.py  config.py  utils.py
src/trip_parser/models/: ner.py
trip-parser/: index.html
usage/: index.html
