[project]
name = "trip"
version = "0.1.0"
description = "NER-based trip extraction system using CamemBERT for French text"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "transformers>=4.36.0,<5.0.0",
    "torch>=2.1.0,<2.3.0",
    "sentencepiece>=0.1.99,<0.3.0",
    "protobuf>=3.20.0,<5.0.0",
    "numpy>=1.24.0,<2.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "accelerate>=0.26.0",
]

[project.optional-dependencies]
dev = ["black>=23.0.0", "ruff>=0.1.0", "mypy>=1.0.0", "ipython>=8.0.0"]
docs = ["mkdocs>=1.5.0", "mkdocs-shadcn>=0.9.0", "mkdocstrings[python]>=0.24.0"]

[project.scripts]
trip-demo = "scripts.demo:main"
trip-train = "scripts.train:main"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["trip*", "scripts*"]

[tool.setuptools.package-data]
trip = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Allow unused imports in __init__.py
