[project]
name = "trip-parser-api"
version = "0.1.0"
description = "REST API for Trip Parser - NER-based trip extraction service"
requires-python = ">=3.11"

dependencies = [
  "trip-parser",
  "fastapi>=0.109.0,<0.111.0",
  "uvicorn[standard]>=0.27.0,<0.29.0",
  "pydantic>=2.5.0,<3.0.0",
]

[project.scripts]
trip-api = "scripts.run_api:main"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["api*", "scripts*"]

[tool.setuptools.package-data]
trip_parser = ["py.typed"]
