[project]
name = "trip-parser"
version = "0.1.0"
description = "NER-based trip extraction library using CamemBERT for French text"
requires-python = ">=3.11"

dependencies = [
  "transformers>=4.36.0,<5.0.0",
  "torch>=2.1.0,<2.3.0",
  "sentencepiece>=0.1.99,<0.3.0",
  "protobuf>=3.20.0,<5.0.0",
  "numpy>=1.24.0,<2.0.0",
  "scikit-learn>=1.3.0,<2.0.0",
  "accelerate>=0.26.0",
]

[project.scripts]
trip-demo = "scripts.demo:main"
trip-train = "scripts.train:main"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["trip_parser*", "scripts*"]

[tool.setuptools.package-data]
trip_parser = ["py.typed"]
